docs: complete startup guide with Java 21 setup, port cleanup, and troubleshooting
- Add Step 0-5 startup flow: verify Java 21, kill port processes, clean run/ and target/, start backend+frontend, verify

- Add troubleshooting table for common startup failures (UnsupportedClassVersionError, port conflicts, store locks)

- Update both root AGENTS.md and java/AGENTS.md